--- a/static/style.css
+++ b/static/style.css
@@ -43,10 +43,12 @@ body {
 }
 
 .box {
-    border: 1px solid #f0f0f0;
-    background-color: #ffffff;
+    font-size: 13px;
+    border: 1px solid rgb(228, 228, 228);
+    background-color: rgb(250, 250, 250);
     padding: 15px 15px;
     margin-bottom: 10px;
+    box-shadow: 0px 0px 4px rgb(249, 249, 249);
 }
 
 .bd {
@@ -61,6 +63,10 @@ body {
     display: none;
 }
 
+button {
+    margin: 20px 15px 20px 15px;
+}
+
 .button {
     font-variant: small-caps;
     display: inline-block;
@@ -71,9 +77,18 @@ body {
     border-radius: 15px;
 }
 
-.button:hover {
+.button:hover, .button:focus {
+    color: white;
+    text-decoration: none;
     cursor: pointer;
     background-color: rgb(58, 86, 168);
+}
+
+.button:disabled, .button:disabled:hover {
+    cursor: default;
+    /*rgb(147, 179, 53);*/
+    background-color: rgb(164, 164, 164);
+    color: rgb(189, 189, 189);
 }
 
 @media (min-width: 1200px) {
