--- a/revoke/templates/revoke/revoke-index.html
+++ b/revoke/templates/revoke/revoke-index.html
@@ -2,13 +2,15 @@
 
 {% block title %} Choose room to revoke {% endblock %}
 {% block content %}
-    <h2>Room revooking page</h2><br><br>
+    <h4>List of your current reservations</h4><br>
+    {% if reservations %}
+    <p>If you would like to cancel room reservation please select one and press "Remove".</p><br>
     <form class="" action="" method="post">
         {% csrf_token %}
         <table class="table table-condensed table-bordered">
             <thead>
                 <tr>
-                    <th></th>
+                    <th class="text-center"><span class="glyphicon glyphicon-trash"></span></th>
                     <th>Date</th>
                     <th>Room</th>
                     <th>Time</th>
@@ -17,7 +19,7 @@
             <tbody>
                 {% for day, room, period in reservations %}
                 <tr>
-                    <td><input type="checkbox" name="chosen" value="{{forloop.counter0}}"></td>
+                    <td class="text-center"><input type="checkbox" class="select" name="chosen" value="{{forloop.counter0}}"></td>
                     <td>{{day}}</td>
                     <td>{{room}}</td>
                     <td>{{period}}</td>
@@ -26,6 +28,12 @@
             </tbody>
         </table><br>
         <a href="{% url 'index' %}" class="button"><span class="glyphicon glyphicon-chevron-left"></span> go back</a>
-        <button class="button" type="submit" name="button">cancel</button>
+        <button class="button" disabled type="submit" name="button"><span class="glyphicon glyphicon-trash"></span> remove</button>
     </form>
+    {% else %}
+    <p>You do not have any reservations at this moment.</p>
+    {% endif %}
+{% endblock %}
+{%block js%}{% load staticfiles %}
+<script src="{% static 'helpers.js' %}"></script>
 {% endblock %}
