--- a/static/style.css
+++ b/static/style.css
@@ -23,14 +23,24 @@ body {
     /*border-radius: 1px;*/
     margin: 1px -1px;
     /*padding: 10px 5px;*/
-    background-color: #F7FFF2;
+    /*background-color: #F7FFF2;*/
+    background-color: rgb(232, 251, 230);
+
     /*#fafafa;*/
     cursor: default;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+
 }
 
 .booked {
-    background-color: #ffe6e6;
-    border-color: #ddb4b4;
+    /*background-color: #ffe6e6;
+    border-color: #ddb4b4;*/
+    background-color: #f9dfdf;
+    border-color: #ddb9b9;
     cursor: not-allowed;
 }
 
@@ -38,7 +48,8 @@ body {
     /*box-shadow: 0px 0px 1px #7FB85C;*/
     border: 1px #B9DBAD solid;
     /*outline: 1px solid #dddddd;*/
-    background-color: #E8F2E1;
+    /*background-color: #E8F2E1;*/
+    background-color: rgb(216, 237, 215);
     z-index: 100;
 }
 
@@ -63,10 +74,6 @@ body {
     display: none;
 }
 
-button {
-    margin: 20px 15px 20px 15px;
-}
-
 .button {
     font-variant: small-caps;
     display: inline-block;
@@ -75,6 +82,8 @@ button {
     background-color: rgb(154, 154, 154);
     border: 1px rgb(150, 150, 150);
     border-radius: 15px;
+    margin: 5px 5px;
+
 }
 
 .button:hover, .button:focus {
