--- a/revoke/templates/revoke/revoke-index.html
+++ b/revoke/templates/revoke/revoke-index.html
@@ -3,6 +3,11 @@
 {% block title %} Choose room to revoke {% endblock %}
 {% block content %}
     <h4>List of your current reservations</h4><br>
+    {% if n %}
+    <div class="alert alert-success">
+        <strong>Success!</strong> You cancelled {{n}} reservation{% ifnotequal n 1 %}s{% endifnotequal %}
+    </div>
+    {% endif %}
     {% if reservations %}
     <p>If you would like to cancel room reservation please select one and press "Remove".</p><br>
     <form class="" action="" method="post">
@@ -31,7 +36,8 @@
         <button class="button" disabled type="submit" name="button"><span class="glyphicon glyphicon-trash"></span> remove</button>
     </form>
     {% else %}
-    <p>You do not have any reservations at this moment.</p>
+    <p>You do not have any reservations at this moment. I you would like to make one please click button below.</p><br>
+    <a href="{% url 'index' %}" class="button"><span class="glyphicon"></span> make reservation</a>
     {% endif %}
 {% endblock %}
 {%block js%}{% load staticfiles %}
