--- a/book/templates/book/success.html
+++ b/book/templates/book/success.html
@@ -11,6 +11,6 @@
         <span style="display:table;"><mark>{{reservation.0}}, Period: {{reservation.1}}</mark></span>
         {% endfor %}
     </div>
-     <p>We have send a confirmation letter to your email address.</p><br>
+     <p>We have sent a confirmation letter to your email address.</p><br>
      <p>Thank you for using our system.</p>
 {% endblock %}
