--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}Welcome to Reservation System{% endblock %}
 {% block content %}
+    <br>
     <p>
-        To reserve room/rooms for <strong>{{ first }}</strong> please click <a href="{% url 'book-index' %}?day=0">here</a>
+        To reserve room/rooms for <strong>{{ first }}</strong> please click <a href="{% url 'book-index' 0 %}">here</a>
     </p>
     <p>
-        To reserve room/rooms for <strong>{{ second }}</strong> please click <a href="{% url 'book-index' %}?day=1">here</a>
+        To reserve room/rooms for <strong>{{ second }}</strong> please click <a href="{% url 'book-index' 1 %}">here</a>
     </p><br>
     <p>
         If you want to <strong><u>cancel</u></strong> one of your current reservations click <a href="{% url 'revoke-index' %}">here</a>
