--- a/book/templates/book/success.html
+++ b/book/templates/book/success.html
@@ -12,5 +12,6 @@
         {% endfor %}
     </div>
      <p>We have sent a confirmation letter to your email address.</p><br>
-     <p>Thank you for using our system.</p>
+     <p>Thank you for using our system.</p><br>
+     <a class="button" href="{% url 'index' %}">go to reservations</a>
 {% endblock %}
