--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,49 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <br>
+    <h5 style="padding: 5px 5px; background-color:rgb(245,245,245);">Make reservation:</h5><br>
     <p>
         To reserve room/rooms for <strong>{{ first }}</strong> please click <a href="{% url 'book-index' 0 %}">here</a>
     </p>
     <p>
         To reserve room/rooms for <strong>{{ second }}</strong> please click <a href="{% url 'book-index' 1 %}">here</a>
     </p><br>
-    <p>
-        If you want to <strong><u>cancel</u></strong> one of your current reservations click <a href="{% url 'revoke-index' %}">here</a>
-    </p>
+    <h5 style="padding: 5px 5px; background-color:rgb(245,245,245);">List of your current reservations:</h5>
+    <br>
+    {% if n %}
+    <div class="alert alert-success">
+        <strong>Success!</strong> You cancelled {{n}} reservation{% ifnotequal n 1 %}s{% endifnotequal %}
+    </div>
+    {% endif %}
+    {% if reservations %}
+    <form class="" action="{% url 'revoke' %}" method="post">
+        {% csrf_token %}
+        <table class="table table-condensed table-bordered">
+            <thead>
+                <tr>
+                    <th class="text-center"><span class="glyphicon glyphicon-trash"></span></th>
+                    <th>Date</th>
+                    <th>Room</th>
+                    <th>Time</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for day, room, period in reservations %}
+                <tr>
+                    <td class="text-center"><input type="checkbox" class="select" name="chosen" value="{{forloop.counter0}}"></td>
+                    <td>{{day}}</td>
+                    <td>{{room}}</td>
+                    <td>{{period}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table><br>
+        <button class="button" disabled type="submit" name="button"><span class="glyphicon glyphicon-trash"></span> remove</button>
+    </form>
+    {% else %}
+    <p>You do not have any reservations at this moment.
+    {% endif %}
+{% endblock %}
+{%block js%}{% load staticfiles %}
+<script src="{% static 'helpers.js' %}"></script>
 {% endblock %}
